- Added all new images provided by MikeZ and removed the ones that are not part of that image set to clean up the project and resources (MySQL.ForExcel.csproj, Properties\Resources.Designer.cs, Properties\Resources.resx). - Added DisabledImage property to HotLabel class to make use of the grayscale images provided by MikeZ instead of generating one at runtime, modified code in OnPaint method to use the new DisabledImage if available, if not compute it at runtime as the code was doing so before (Controls\HotLabel.cs). - Added ImagePixelsYOffset property to HotLabel class to adjust the vertical offset of the new images provided by MikeZ and added code in OnPaint method to use it (Controls\HotLabel.cs). - Added NodeHeightMultiple property (by default set to 2) to MyTreeView class to be able to play more with node sizes, since given MikeZ's designs the node heights vary between panels, with this property the multiple of child nodes can be set to something higher than 2, modified code in SetNodeHeight and AddNode methods to use this new property (Classes\MyTreeView.cs). - Modified code in DrawChildNode method to align the text vertically centered when only the title or the description is set to match MikeZ designs (Classes\MyTreeView.cs). - Changed the anchor of the grpColumnOptions to not resize when the form is resized as per MikeZ (Forms\ExportDataForm.Designer.cs). - Changed alignment of controls given MikeZ feedback (Forms\PasswordDialog.designer.cs). - Removed context menu and small images controls from panels (Panels\DBObjectSelectionPanel.Designer.cs, Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs). - Adjusted HotLabel properties for all labels in all panels to match the new icons given by MikeZ and to properly match the screen designs (Panels\DBObjectSelectionPanel.Designer.cs, Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs).

--- a/source/Panels/SchemaSelectionPanel.resx
+++ b/source/Panels/SchemaSelectionPanel.resx
@@ -117,162 +117,65 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="schemasContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>254, 17</value>
-  </metadata>
   <metadata name="largeImages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>136, 17</value>
+    <value>21, 19</value>
   </metadata>
   <data name="largeImages.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADi
-        GAAAAk1TRnQBSQFMAwEBAAHoAQEB6AEBASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
-        ASADAAEBAQABIAYAAUAtAAEBAwMBBAMHAQkDDQERAxIBGAMWAR8DGgElAx0BKQMeASsDIAEuAyEBMAMh
-        ATADIQEwAyABLwMfASwDHQEpAxoBJQMWAR8DEgEYAwwBEAMHAQkDAgEDAwABAf8AoQADAQECAwYBCAMP
-        ARQDHwEsA04BlAFYAlsBxgFcAmQB5wFRAm0B9wE+AlwB+AEAAYABpgH/AQABQgGjAf8BAAFAAaEB/wEA
-        AT0BoAH/AQABOwGeAf8BPgJcAfgBUQJtAfcBXAJkAecDWwHIA04BmQMmATgDHwEtAxgBIgMPARQDBgEI
-        AwEBAv8AnAABAQMHAQoDMgFQAVgCXgHdARcCfwH+AQABjAGxAf8BAAGaAboB/wEZAaoBxgH/AToBvAHT
-        Af8BjAHJAdwB/wGDAccB2wH/AT8BxAHZAf8BNQHBAdkB/wEqAb4B1wH/ASABuwHWAf8BFgG5AdUB/wEA
-        AaYBxwH/AQABkwG2Af8BAAFDAaQB/wEAATMBlgH/AQgBcwF/Af4BVwJcAd8BOQI6AWADHwEtAxQBGwMH
-        AQkDAAEB/wCVAAMEAQYBVAJWAasBAAGWAboB/wEAAaABwQH/ATcBxgHdAf8BxwHtAfgB/wHpAfoC/wHr
-        AfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8Af8BkgHoAfwB/wGC
-        AeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ARkB0QHvAf8BDQGuAc0B/wEAAUMBogH/AQABNAGX
-        Af8BUwJUAawDIQEwAxIBGAMEAQX/AJUAA0sBjgEAAZUBugH/ARwBvwHdAf8BpgHsAf4B/wG/AfIC/wHZ
-        AfcC/wHpAfoC/wHrAfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8
-        Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6Af8BgwHlAfwB/wG2
-        Ae0B/AH/ASYBrgHKAf8BAAEwAZIB/wNOAZgDGgElAwgBC/8AlQABUQJtAfcBDQG6AdoB/wGSAegC/wGo
-        Ae0C/wG/AfIC/wHZAfcC/wHpAfoC/wHrAfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGz
-        Ae8B/QH/AaIB7AH8Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6
-        Af8BgwHlAfwB/wG6AfAB/gH/Ab4B7gL/AQABogHJAf8BTAJfAfMDHgErAwoBDv8AlQABHwJ/Af4BQQHh
-        Af0B/wGSAegC/wGoAe0C/wG/AfIC/wHZAfcC/wHpAfoC/wHrAfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+
-        Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7Af8BLQHfAfoB/wEl
-        Ad4B+gH/ASIB3QH6Af8BgwHlAfwB/wG6AfAB/gH/Ab4B7gL/ASsBzwH2Af8BKwEuAUMB/AMfASwDCgEO
-        /wCVAAEiAn8B/gGBAeQC/wGSAegC/wGoAe0C/wG/AfIC/wHZAfcC/wHpAfoC/wHrAfsC/wHnAfoC/wHe
-        AfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7
-        Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6Af8BgwHlAfwB/wG6AfAB/gH/Ab4B7gL/ATIB1wH+Af8BKwEu
-        AUUB/AMfASwDCgEO/wCVAAEiAn8B/gGBAeQC/wGSAegC/wGoAe0C/wG/AfIC/wHZAfcC/wHpAfoC/wHr
-        AfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8Af8BkgHoAfwB/wGC
-        AeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6Af8BgwHlAfwB/wG6AfAB/gH/Ab4B7gL/
-        ATIB1wH+Af8BKwEvAUUB/AMfASwDCgEO/wCVAAEjAn8B/gGBAeQC/wGSAegC/wGoAe0C/wG/AfIC/wHZ
-        AfcC/wHpAfoC/wHrAfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8
-        Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6Af8BgwHlAfwB/wG6
-        AfAB/gH/Ab4B7gL/ATIB1wH+Af8BKwEvAUUB/AMfASwDCgEO/wCVAAEjAn8B/gGBAeQC/wGSAegC/wGo
-        Ae0C/wG/AfIC/wHZAfcC/wHpAfoC/wHrAfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGz
-        Ae8B/QH/AaIB7AH8Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6
-        Af8BgwHlAfwB/wG6AfAB/gH/Ab4B7gL/ATIB1wH+Af8BKwEwAUUB/AMfASwDCgEO/wCVAAEjAn8B/gGB
-        AeQC/wGSAegC/wGoAe0C/wG/AfIC/wHZAfcC/wHLAewB9QH/AacB2gHoAf8BiQHKAd0B/wEoAbcB0AH/
-        ASIBtQHPAf8BGwGyAcwB/wEUAa8BywH/AQwBrAHKAf8BBQGqAcgB/wEAAacBxgH/AQkBtQHUAf8BDwHA
-        Ad4B/wEZAdEB7gH/ASIB3QH6Af8BgwHlAfwB/wG6AfAB/gH/Ab4B7gL/ATIB1wH+Af8BKwEwAUUB/AMd
-        ASkDCgEN/wCVAAEgAn8B/gE9Ad4B+gH/AZIB6AL/AYMB1wHuAf8BHQG8AdYB/wEAAZ4BwAH/AQABlQG6
-        Af8BAAGYAboB/wEDAaUBxAH/AREBqwHHAf8BIgG1Ac8B/wEcAbIBzQH/ARUBsAHMAf8BDQGtAcoB/wEF
-        AaoByAH/AQABmgG8Af8BAAGQAbQB/wEAAUABogH/AQABPAGeAf8BAAFBAaMB/wEAAaEBwgH/AY0B0QHl
-        Af8BvgHuAv8BIgHHAe4B/wEhAl8B+wMYASIDBwEJ/wCVAAFcAmEB3AEAAbIB1AH/AQIBswHTAf8BAAGg
-        AcMB/wETAbYB0wH/AZgB1wHoAf8BzgHtAfYB/wHrAfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHy
-        Af0B/wGzAe8B/QH/AaIB7AH8Af8BkgHoAfwB/wGCAeUB+wH/ATgB4gH7Af8BLQHfAfoB/wEYAdAB7QH/
-        AQIBuAHYAf8BAAGWAbgB/wEAATcBmgH/AQABlgG2Af8BAAGMAbMB/wFYAl4B3QMVAR0DBQEH/wCVAAM+
-        AWsBAAGkAccB/wECAbQB1AH/AZUB4gH3Af8BvwHyAv8B2QH3Av8B6QH6Av8B6wH7Av8B5wH6Av8B3gH4
-        Af4B/wHRAfUB/gH/AcMB8gH9Af8BswHvAf0B/wGiAewB/AH/AZIB6AH8Af8BggHlAfsB/wE4AeIB+wH/
-        AS0B3wH6Af8BJQHeAfoB/wEiAd0B+gH/AYMB5QH8Af8BnAHcAe4B/wEAAY8BsQH/AQABNwGaAf8DQQFy
-        AxkBIwMHAQr/AJUAAV4CZQHlAQQBuAHZAf8BkQHnAf4B/wGoAe0C/wG/AfIC/wHZAfcC/wHpAfoC/wHr
-        AfsC/wHnAfoC/wHeAfgB/gH/AdEB9QH+Af8BwwHyAf0B/wGzAe8B/QH/AaIB7AH8Af8BkgHoAfwB/wGC
-        AeUB+wH/ATgB4gH7Af8BLQHfAfoB/wElAd4B+gH/ASIB3QH6Af8BgwHlAfwB/wG6AfAB/gH/AboB6wH9
-        Af8BAAGPAbUB/wFaAmEB5AMdASoDCgEN/wCVAAEmAn8B/gE6Ad0B+QH/AZIB6AL/AagB7QL/Ab8B8gL/
-        AdkB9wL/AekB+gL/AesB+wL/AecB+gL/Ad4B+AH+Af8B0QH1Af4B/wHDAfIB/QH/AbMB7wH9Af8BogHs
-        AfwB/wGSAegB/AH/AYIB5QH7Af8BOAHiAfsB/wEtAd8B+gH/ASUB3gH6Af8BIgHdAfoB/wGDAeUB/AH/
-        AboB8AH+Af8BvgHuAv8BIQHIAe8B/wErATQBSQH8Ax8BLAMKAQ7/AJUAASoCfwH+AYEB5AL/AZIB6AL/
-        AagB7QL/Ab8B8gL/AdkB9wL/AekB+gL/AesB+wL/AecB+gL/Ad4B+AH+Af8B0QH1Af4B/wHDAfIB/QH/
-        AbMB7wH9Af8BogHsAfwB/wGSAegB/AH/AYIB5QH7Af8BOAHiAfsB/wEtAd8B+gH/ASUB3gH6Af8BIgHd
-        AfoB/wGDAeUB/AH/AboB8AH+Af8BvgHuAv8BLAHRAfgB/wErATMBSQH8Ax8BLAMKAQ7/AJUAASsCfwH+
-        AYEB5AL/AZIB6AL/AagB7QL/Ab8B8gL/AdkB9wL/AekB+gL/AesB+wL/AecB+gL/Ad4B+AH+Af8B0QH1
-        Af4B/wHDAfIB/QH/AbMB7wH9Af8BogHsAfwB/wGSAegB/AH/AYIB5QH7Af8BOAHiAfsB/wEtAd8B+gH/
-        ASUB3gH6Af8BIgHdAfoB/wGDAeUB/AH/AboB8AH+Af8BvgHuAv8BLAHRAfgB/wErATQBSQH8Ax8BLAMK
-        AQ7/AJUAASwCfwH+AYEB5AL/AZIB6AL/AagB7QL/Ab8B8gL/AdkB9wL/AekB+gL/AesB+wL/AecB+gL/
-        Ad4B+AH+Af8B0QH1Af4B/wHDAfIB/QH/AbMB7wH9Af8BogHsAfwB/wGSAegB/AH/AYIB5QH7Af8BOAHi
-        AfsB/wEtAd8B+gH/ASUB3gH6Af8BIgHdAfoB/wGDAeUB/AH/AboB8AH+Af8BvgHuAv8BLAHRAfgB/wEr
-        ATUBSQH8Ax8BLAMKAQ7/AJUAASwCfwH+AYEB5AL/AZIB6AL/AagB7QL/Ab8B8gL/AdkB9wL/AekB+gL/
-        AesB+wL/AecB+gL/Ad4B+AH+Af8B0QH1Af4B/wHDAfIB/QH/AbMB7wH9Af8BogHsAfwB/wGSAegB/AH/
-        AYIB5QH7Af8BOAHiAfsB/wEtAd8B+gH/ASUB3gH6Af8BIgHdAfoB/wGDAeUB/AH/AboB8AH+Af8BvgHu
-        Av8BLAHRAfgB/wErATYBSQH8Ax8BLAMKAQ7/AJUAAS0CfwH+AYEB5AL/AZIB6AL/AagB7QL/Ab8B8gL/
-        AdkB9wL/AekB+gL/AesB+wL/AdEB8AH4Af8BtgHlAfEB/wGjAd0B7QH/AUEBzAHhAf8BNgHJAd8B/wEr
-        AcYB3gH/ATcB0gHqAf8BLgHSAesB/wEuAdkB8wH/AS0B3wH6Af8BJQHeAfoB/wEiAd0B+gH/AYMB5QH8
-        Af8BugHwAf4B/wG+Ae4C/wEsAdEB+AH/ASsBNgFJAfwDHwEsAwoBDv8AlQABLQJ/Af4BgQHkAv8BkgHo
-        Av8BqAHtAv8BqQHnAfcB/wGGAdIB5gH/AR4BuwHVAf8BAAGmAcgB/wEAAa0BzAH/ARwBuwHXAf8BGwG5
-        AdUB/wEjAbwB1wH/AToByAHgAf8BIQG6AdUB/wESAbEBzgH/AQ8BrgHNAf8BAAGbAb0B/wEAAY8BswH/
-        AQABnQHAAf8BAAG1AdYB/wE3AdcB8AH/AboB8AH+Af8BvgHuAv8BLAHRAfgB/wErATcBSwH8Ax8BLAMK
-        AQ7/AJUAAS0CfwH+AYEB5AL/ATQB1QHwAf8BAAG2AdYB/wERAbsB2AH/ATcBzAHlAf8BmwHfAfMB/wG4
-        Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BtQHsAf0B/wGwAeoB/QH/AaoB6QH9
-        Af8BowHmAf0B/wGcAeQB/QH/AZQB4gH9Af8BOgHQAfAB/wEQAbMB1gH/AQABmQG/Af8BAAGSAbQB/wGJ
-        Ac0B5AH/ASwB0QH4Af8BKwE4AUsB/AMfASwDCgEO/wCVAAEtAn8B/gELAcIB4QH/AQsBuwHaAf8BmQHf
-        AfMB/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/
-        AbUB7AH9Af8BsAHrAf0B/wGrAekB/QH/AaQB5wH9Af8BnQHkAf0B/wGVAeIB/QH/AY0B3wH+Af8BhQHd
-        Af4B/wFCAdsB/gH/ATsB2AH+Af8BKQHHAe0B/wEAAZUBuQH/AQABnAHDAf8BKwE4AUsB/AMfASwDCgEO
-        /wCWAAGzAdUB/wEtAcsB5QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4
-        Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG2AewB/QH/AbEB6wH9Af8BqwHpAf0B/wGlAecB/QH/AZ0B5QH9
-        Af8BlgHiAf0B/wGOAeAB/gH/AYYB3QH+Af8BQwHbAf4B/wE+AdkB/gH/AYUB3QH+Af8BkwHgAf4B/wGg
-        AeMB/gH/ARwBsgHQAf8CQAGjAf0DHgErAwoBDf8AlgABswHVAf8BswHrAfwB/wG4Ae0B/QH/AbgB7QH9
-        Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/AbYB7AH9Af8BsQHrAf0B/wGs
-        AekB/QH/AaUB5wH9Af8BngHlAf0B/wGXAeIB/QH/AY8B4AH+Af8BhwHdAf4B/wGCAdwB/gH/AYgB3QH+
-        Af8BkwHgAf4B/wGgAeQB/gH/Aa4B6AH+Af8BuQHrAv8BvgHsAf4B/wEAAYIBqAH/AxkBIwMHAQr/AJUA
-        ASwCXwH7AaQB5QH3Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9
-        Af8BtgHsAf0B/wGyAesB/QH/AawB6QH9Af8BpgHnAf0B/wGfAeUB/QH/AZcB4wH9Af8BkwHhAf0B/wGQ
-        AeAB/gH/AY8B3wH+Af8BkwHgAf4B/wGbAeMB/gH/AacB5gH+Af8BtAHqAv8BwgHuAv8BzQHxAv8BvgHn
-        AfcB/wFBAmoB+QMQARUDAwEE/wCVAANEAXkBDAG+Ad0B/wGrAecB+QH/AbgB7QH9Af8BuAHtAf0B/wG4
-        Ae0B/QH/AbgB7QH9Af8BtwHtAf0B/wGyAesB/QH/Aa0B6gH9Af8BpwHoAf0B/wGgAeUB/QH/AZwB5AH9
-        Af8BmQHiAf0B/wGXAeIB/gH/AZYB4gH+Af8BlwHhAf4B/wGcAeMB/gH/AaQB5QH+Af8BsQHpAf4B/wG+
-        AewC/wHLAfAC/wHGAesB+gH/AQABmQG5Af8DQgF2AwUBBwMAAQH/AJkAAUkCSgGJAQABtgHXAf8BPAHS
-        AeoB/wGxAeoB+wH/AbgB7QH9Af8BtwHtAf0B/wGzAesB/QH/Aa4B6gH9Af8BpwHoAf0B/wGgAeYB/QH/
-        AZwB5AH9Af8BmQHjAf0B/wGWAeIB/gH/AZYB4QH+Af8BlQHhAf4B/wGYAeEB/gH/AZ0B4wH+Af8BpQHl
-        Af4B/wGwAegB/gH/AbcB6AH8Af8BOgHAAdkB/wEdAn8B/gNIAYQDBAEGAwABAf8AoQADFQEdAVkCXQHS
-        ASgCfwH+AQ4BvQHaAf8BLQHKAeQB/wGIAdgB7wH/AZ0B4wH5Af8BoQHmAf0B/wGaAeMB/QH/AZUB4gH9
-        Af8BkwHgAf4B/wGQAeAB/gH/AZAB4AH+Af8BkAHgAf4B/wGKAdoB+QH/ATgBywHqAf8BGgG2AdYB/wEA
-        AaABwQH/AQ8CfwH+AVkCXAHPAxYBHwMBAQL/ALUAAT0CPgFqAVoCXQHKAVkCZAHsASQCXwH7ASMCXwH7
-        AR8CfwH+AQABrAHOAf8BAAGpAcwB/wEAAacBygH/ARkCfwH+ASECXwH7ASECXwH7AVgCYgHpAVcCWQHC
-        AzsBZQMDAQQDAAEB/wCZAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYAAQIWAAP/AQAB/AIA
-        AQcMAAH4AgABAwwAAfACAAEBDAAB8AIAAQEMAAHwAgABAQwAAfACAAEBDAAB8AIAAQEMAAHwAgABAQwA
-        AfACAAEBDAAB8AIAAQEMAAHwAgABAQwAAfACAAEBDAAB8AIAAQEMAAHwAgABAQwAAfACAAEBDAAB8AIA
-        AQEMAAHwAgABAQwAAfACAAEBDAAB8AIAAQEMAAHwAgABAQwAAfACAAEBDAAB8AIAAQEMAAHwAgABAQwA
-        AfACAAEBDAAB8AIAAQEMAAHwAgABAQwAAfACAAEBDAAB8AIAAQEMAAHwAgABAQwAAfgCAAEDDAAB/AIA
-        AQ8MAAH/AYABAAE/DAAL
-</value>
-  </data>
-  <metadata name="smallImages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="smallImages.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABa
-        BgAAAk1TRnQBSQFMAwECAAECAQABAgEQAQABEAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAUADAAEQ
-        AwABAQEAASAGAAEQHQABAQMGAQgDDgETAxYBHwMcAScDHgErAyABLgMgAS4DHgErAxwBJwMWAR8DDgET
-        AwYBCAMAAQHIAAMEAQYDIQEwA1IBqQFXAlwB3wFXAl8B6AEbAn8B/gEAAZ0BxgH/AVcCXwHoAVsCYQHh
-        A1QBrwMxAU8DHwEsAxIBGAMEAQbIAAE9Aj4BagEwAn8B/gE/AcgB3gH/AcEB5AHvAf8B0QHxAfgB/wHE
-        AfMB/QH/AaEB6wH8Af8BOgHcAfQB/wEWAckB5wH/AQcBsQHQAf8BKgJ/Af4BSQJKAYkDGgElAwcBCsgA
-        AVQCYQHuAZAB5QH8Af8ByQH0Av8B7AH7Av8B4AH5Af4B/wHEAfMB/QH/AaEB6wH8Af8BQgHkAfsB/wEp
-        Ad8B+gH/ATQB4QH7Af8BvgHrAfsB/wFZAmcB8gMcASgDCQEMyAABUQJtAfcBlgHpAv8ByQH0Av8B7AH7
-        Av8B4AH5Af4B/wHEAfMB/QH/AaEB6wH8Af8BQgHkAfsB/wEpAd8B+gH/ATQB4QH7Af8BxQHwAv8BPgJc
-        AfgDHAEoAwkBDMgAAVECbQH3AZYB6QL/AckB9AL/AewB+wL/AeAB+QH+Af8BxAHzAf0B/wGhAesB/AH/
-        AUIB5AH7Af8BKQHfAfoB/wE0AeEB+wH/AcUB8AL/AT4CXAH4AxsBJgMIAQvIAANdAe0BkgHmAfwB/wGR
-        AdcB6gH/AT8BwwHZAf8BKQG4AdAB/wEAAaIBwAH/AQABmwG8Af8BAAGmAcYB/wEAAakBygH/AREBvgHc
-        Af8BwQHuAf0B/wFTAmQB8QMaASUDBwEKyAABVAJWAasBAAGvAdEB/wFCAc0B4wH/AcIB5wHxAf8B0gHy
-        AfkB/wHEAfMB/QH/AaEB6wH8Af8BOgHdAfUB/wEWAcsB6AH/AQYBswHTAf8BAAGMAa8B/wFWAlgBuQMc
-        AScDCAELyAABWQJnAfIBkQHmAfwB/wHJAfQC/wHsAfsC/wHgAfkB/gH/AcQB8wH9Af8BoQHrAfwB/wFC
-        AeQB+wH/ASkB3wH6Af8BNAHhAfsB/wG+AewB+wH/AUICWQH1AxwBKAMJAQzIAAFRAm0B9wGWAekC/wHJ
-        AfQC/wHsAfsC/wHgAfkB/gH/AcQB8wH9Af8BoQHrAfwB/wFCAeQB+wH/ASkB3wH6Af8BNAHhAfsB/wHF
-        AfAC/wE+AlwB+AMcASgDCQEMyAABUQJtAfcBlgHpAv8BvwHvAfwB/wGsAd4B7AH/AZAB0gHjAf8BHgG5
-        AdIB/wENAbIBzwH/ARQBvwHbAf8BDQHDAeEB/wEuAdsB9gH/AcUB8AL/AT4CXAH4AxwBKAMJAQzIAAFR
-        Am0B9wEnAcsB5wH/AS4ByAHhAf8BjgHYAe0B/wGpAeUB9wH/AbcB7QH9Af8BrgHqAf0B/wGWAd4B9gH/
-        ATUBygHnAf8BCwGvAdIB/wEpAbgB0wH/AT4CXAH4AxwBJwMJAQzIAAErAVwBZQH8AawB6AH5Af8BuAHt
-        Af0B/wG4Ae0B/QH/AbcB7QH9Af8BrgHqAf0B/wGiAeYB/QH/AZUB4gH9Af8BjgHfAf4B/wGhAeQB/gH/
-        AasB5AH6Af8BKwE/AVoB/AMWAR4DBgEIyAABUwJkAfEBtQHsAfwB/wG4Ae0B/QH/AbcB7QH9Af8BrgHq
-        Af0B/wGiAeYB/QH/AZsB5AH9Af8BoQHkAf4B/wGxAekB/gH/AccB7wL/AdIB8gH+Af8BTAJfAfMDCgEN
-        AwIBA8gAAxABFQNfAeABOwHQAegB/wGSAd0B8wH/AaIB5gH9Af8BlgHiAf0B/wGVAeEB/gH/AZwB4wH+
-        Af8BkwHYAfEB/wE3AcEB2wH/AVgCXwHjAxQBGwMBAQLUAAMJAQwDRQF9AU8CUwGlAVsCXgHZAV4CYQHa
-        AVECUgGnAUUCRgF/AwgBCwMAAQHMAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/
-        AQABwAcAAcAHAAHABwABwAcAAcAHAAHABwABwAcAAcAHAAHABwABwAcAAcAHAAHABwABwAcAAcAHAAHA
-        AQEGAAHwAQcGAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC8
+        CwAAAk1TRnQBSQFMAwEBAAFIAQABSAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ARgDAAEBAQABIAYAASQ2AAMBBAIEAwEEAwUBBwMFAQcDBAEFAwMBBAMDAQQDAQEC/wBRAAMBAQIDBgEI
+        AwoEDgETAxEBFwMUARsDFgEfAxYBHgMUARsDEQEXAw4BEwMLAQ8DBwEJAwIBA/8ARQADBAEFAxUBHQMo
+        ATwBPwJAAW4BTQJOAZYBUwJVAbABWwJeAc4BWgFeAV8B2AFVAlcBugFSAlMBqAFFAkYBfwM5AV8DJQE3
+        Ax0BKQMPARQDBgEIAwEBAv8AOQADBQEHATUCNgFYAVcBaAFqAeIBMAGkAcUB/wFfAbYBzgH/AY4ByQHc
+        Af8BlwHQAeIB/wGHAcsB4AH/AWsBxwHdAf8BWgHCAdsB/wFFAbkB1wH/ASoBpAHFAf8BFAGMAbEB/wEi
+        AXgBmQH6A1EBogMoAT0DFAEbAwYBCP8AOQADQQFyASwBrgHQAf8BhwHWAesB/wHYAfgC/wH1A/8B7wH9
+        Av8B3gH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AXQB5gH9Af8BYQHkAf0B/wFdAeMC/wF2AdoB8gH/
+        AU8BqQHHAf8BWwJeAdACKwEsAUMDCQEM/wA5AAE8AY4BqgH5AYAB3gH3Af8BsgHyAv8B0gH1Av8B7AH7
+        Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AXEB4wH7Af8BXQHfAfoB/wFW
+        Ad0B+gH/AZgB7AL/Ab0B8AH+Af8BNQGxAdsB/wNHAYMDBgEI/wA5AAFBAZIBrQH5AZAB6gL/AawB7gL/
+        AdIB9QL/AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wFxAeMB+wH/
+        AV0B3wH6Af8BVgHdAfoB/wGSAegB/AH/AcQB9wL/AUcBwQHsAf8DRwGDAwYBCP8AOQABRgGSAaQB9wGN
+        AegC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/Ad0B+QL/AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wFy
+        AeQB/AH/AV0B3wH6Af8BVgHdAfoB/wGSAegB/AH/AcIB9QL/AUUBwQHrAf8DRwGCAwYBCP8AOQABSAGS
+        AaQB9wGNAegC/wGuAe8C/wHdAfsG/wH8A/8B1wH1AfwB/wG3AeoB9wH/AaEB5wH3Af8BiQHiAfYB/wF2
+        AegC/wFnAekC/wFdAeUC/wGWAewC/wHCAfUC/wFFAcEB7AH/A0YBgQMFAQf/ADkAAUABnQGtAfoBlQHu
+        Av8BpQHqAfwB/wGDAc0B4QH/AVEBswHOAf8BOQGmAcMB/wE+AagBxAH/AUEBqQHGAf8BOAGmAcQB/wEq
+        AZ8BvgH/ARcBkQG0Af8BFAGRAbUB/wEhAaMBxgH/AXEB0QHoAf8BzgH+Av8BSgHEAe4B/wNFAX8DAgED
+        /wA5AAFaAV8BYQHYAT4BugHaAf8BOwGzAdEB/wFvAccB3gH/AaoB2wHpAf8BsgHeAeoB/wGsAd4B7AH/
+        AaAB3QHtAf8BjAHZAesB/wFtAdIB6QH/AVMBxwHjAf8BQgHDAeAB/wExAbMB0wH/ASsBnQG+Af8BMQGX
+        AbYB/wErAZABuQH+Az8BbQMDAQT/ADkAAVgBWwFdAcsBRAG+Ad0B/wGZAeMB9gH/AcsB8gH8Af8B8AH9
+        Av8B8gP/AeEB+wL/AckB9QL/AbAB8QL/AZYB6wH+Af8BdQHnAf4B/wFgAeMB/QH/AVUB3AH5Af8BhwHg
+        AfUB/wFxAcEB2QH/AScBiQGeAfkDPQFpAwcBCf8AOQABTAGEAZMB8wGIAeQB/QH/Aa4B7wL/AdMB9gL/
+        AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wFxAeMB+wH/AV0B3wH6
+        Af8BVgHdAfoB/wGVAeoB/QH/AcAB8wL/AT4BuwHmAf8DRgGAAwYBCP8AOQABUQGWAagB9wGNAegC/wGs
+        Ae4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BcQHj
+        AfsB/wFdAd8B+gH/AVYB3QH6Af8BkgHoAfwB/wHCAfUC/wFEAcMB7gH/A0cBggMGAQj/ADkAAVEBlwGo
+        AfcBjAHoAv8BrAHuAv8B1AH2Av8B8QH9Av8B8AH9Av8B4QH6Av8BygH1Av8BsAHxAf4B/wGWAesB/QH/
+        AXUB5gH+Af8BYAHiAfwB/wFXAd4B+wH/AZIB6AH8Af8BwgH1Av8BRQHEAe4B/wNHAYIDBgEI/wA5AAFR
+        AZkBqAH3AY4B6QL/AbIB8QL/Ac8B9AH+Af8B0QHuAfYB/wHAAecB8QH/Aa8B4gHvAf8BnQHdAe4B/wGJ
+        AdkB7AH/AWwB0wHqAf8BVgHOAeoB/wFIAc0B6gH/AU4B1gH0Af8BlwHsAv8ByQH5Av8BRQHEAe8B/wNH
+        AYIDBgEI/wA5AAFRAZoBqwH3AYQB5AH8Af8BgwHZAfAB/wGQAdgB6wH/AYQB0AHkAf8BbgHKAeEB/wFl
+        AcUB3QH/AWEBwgHcAf8BXwHAAdoB/wFaAb0B2AH/AU0BuQHXAf8BRAG2AdYB/wE8AbkB2gH/AV0BxgHg
+        Af8BnwHfAfAB/wFHAcYB8AH/A0cBggMGAQj/ADkAAUwBlgGoAfcBXQHPAesB/wFwAdAB6AH/AYgB1gHt
+        Af8BqQHmAfgB/wG/AfEC/wHDAfMC/wHCAfMC/wG7AfAC/wGzAe4C/wGqAesC/wGVAeIB/QH/AWUBywHr
+        Af8BUwG6AdoB/wFZAbsB2wH/ASgBrgHZAf8DRwGCAwYBCP8AOQABRAGcAbAB+QGZAd8B8gH/AcIB8QL/
+        AcAB8QL/AbsB7gH+Af8BuQHtAf0B/wG3Ae0B/QH/AbAB6wH9Af8BqAHoAf0B/wGeAeQB/QH/AZEB4QH9
+        Af8BjQHgAf4B/wGWAeQC/wGpAewC/wGlAeQB+AH/AUYBuQHdAf8DRgGAAwIBA/8AOQABPgG/Ad8B/wHG
+        AfIC/wG6Ae4B/QH/AbgB7QH9Af8BuQHtAf0B/wG4Ae0B/QH/AbEB6wH9Af8BqAHoAf0B/wGdAeQB/QH/
+        AZQB4QH9Af8BkgHhAf4B/wGcAeIB/gH/AakB5wH+Af8BtwHrAv8B2QH8Av8BhAHWAfIB/wNEAXr/AD0A
+        AUUCRgF/AWMBzAHmAf8BtAHrAfsB/wHBAfEC/wG7Ae4B/gH/AbMB7AH+Af8BqQHoAf0B/wGeAeUB/QH/
+        AZUB4QH9Af8BlAHiAf4B/wGdAeQC/wGpAecC/wG8Ae4C/wHLAfIC/wGYAdIB5wH/AVsBXAFdAcgDGgEk
+        /wA9AAMEAQYDMgFRAVABfgGGAe8BXAHIAeMB/wGIAdcB7gH/AZEB3QH0Af8BlAHfAfgB/wGVAeIB/gH/
+        AZQB4gL/AZIB4AH9Af8BhwHXAfMB/wGEAdIB7AH/AWIBwAHcAf8BOgGuAdEB/wNQAZoDEQEX/wBJAAMN
+        ARIDFgEeATwCPQFnAVQCVgGrAVkBXAFeAcwBWgFmAWsB4AFYAWYBbQHjAVoBYAFiAdYBVgJXAbgDSgGM
+        AyQBNQMQARUDBgEI/wD/ALYAAUIBTQE+BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEA
+        Af8BgAE/CQAB/AEAAQ8JAAH4AQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEA
+        AQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkA
+        AfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQcJAAHwAQABBwkAAfABAAEPCQAB/AEA
+        AR8JAAP/CQAL
 </value>
   </data>
 </root>
