--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -217,9 +217,6 @@
   <data name="PrimaryKeyColumnExistsWarning" xml:space="preserve">
     <value>Primary Key column cannot be created because another column has the same name.</value>
   </data>
-  <data name="Chain_Link_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\chain link-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ColumnDataNotUniqueWarning" xml:space="preserve">
     <value>Data in the current column is not unique.</value>
   </data>
@@ -315,5 +312,8 @@
   </data>
   <data name="MySQLforExcel_ImportRoutineDlg_Params_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-ImportRoutineDlg-Params-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MySQLforExcel_Input_64x64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MySQLforExcel-Input-64x64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
