--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -316,4 +316,7 @@
   <data name="MySQLforExcel_Input_64x64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-Input-64x64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ExportDataTypeNotValidWarning" xml:space="preserve">
+    <value>Entered Data Type is not a MySQL recognized data type.</value>
+  </data>
 </root>
